--- a/dnsdist.conf
+++ b/dnsdist.conf
@@ -6,7 +6,7 @@ addAction(MaxQPSIPRule(100), DropAction())
 
 -- disable security status polling via DNS
 setServerPolicy(firstAvailable)
-newServer({address="unbound:53", name="unbound"})
+newServer({address="10.152.118.100:53", name="unbound"})
 newServer({address="213.186.33.99:53", name="OVH"})
 newServer({address="62.210.16.6:53", name="online"})
 newServer({address="8.8.8.8:53", name="Google"})
