add standard DNS

--- a/dnsdist.conf
+++ b/dnsdist.conf
@@ -1,5 +1,7 @@
 addDOHLocal("0.0.0.0:8053")
 addDOHLocal("[::]:8053")
+addLocal("0.0.0.0:53")
+addLocal("[::]:53")
 addACL('0.0.0.0/0')
 addACL('[::]/0')
 addAction(MaxQPSIPRule(100), DropAction())
